# snapref

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: store-format.md
examples/: README.md  agent-loop.sh
scripts/: smoke.sh
src/: blame.rs  cli.rs  diff.rs  glob.rs  lib.rs  main.rs  object.rs  restore.rs  sha1.rs  snapshot.rs  store.rs  timefmt.rs  walker.rs
tests/: cli.rs
